FELIX-1750: fileinstall does not work on jdk 1.4
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@824828 13f79535-47bb-0310-9956-ffa450edef68